--- a/style.css
+++ b/style.css
@@ -3,3 +3,37 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1{
+  text-align: center;
+}
+
+nav{
+  text-align: center;
+  padding: 10px;  
+}
+  nav > a {
+    background-color: grey;
+  }
+  
+#featured-property{
+  text-align: center;
+}
+
+figcaption{
+  text-align: center;
+  font-size: smaller;
+}
+
+#featured-property p{
+  width: 800px;
+  text-align: center;
+  margin: 10px auto;
+} 
+
+#details>div{
+  text-align: center;
+  float: left;
+  background-color:aquamarine;
+  width: 25%;
+}
